--- a/scss/sections/__contact.scss
+++ b/scss/sections/__contact.scss
@@ -15,6 +15,7 @@
         background-color: transparent;
         border: none;
         display: none;
+        z-index: 5;
 
         @media screen and (max-width: $bp-MD){
             display: block;
